# payment-graph-forecasting

./: .gitignore  CLAUDE.md  Evaluation Protocols for Temporal Link Prediction on Dynamic Transaction Graphs.md  LICENSE  README.md  TEAM.md  pyproject.toml  requirements.txt
docs/: README.md  baseline_results_for_llm.md  baseline_results_summary.md  cuda_common_neighbors.md  cuda_module_api.md  cuda_module_overview.md  cuda_temporal_sampling.md  dev_machine_guide.md  evaluation_protocols_temporal_lp.md  evaluation_protocols_temporal_lp_ru.md  graphmixer_pipeline.md  library_assistant_prompt.md
exps/: README.md
payment_graph_forecasting/: __init__.py  cuda.py  graph_metrics.py
scripts/: analyze_stream_graph.py  bench_cn.py  bench_sampling.py  build_dense_validation_bundle.py  check_heavy.sh  collect_results.py  compute_stream_adjacency.py  compute_stream_node_features.py  convert_edge_table_to_stream_graph.py  convert_jodie_csv_to_stream_graph.py  eagle_sanity_check.py  full_check.sh  launch_experiment.py  merge_heuristic.py  monitor_gpu.sh  monitor_loop.sh  plot_cuda_comparison.py  run_cuda_comparison.sh  run_dygformer_train.sh  run_eagle.py  run_glformer_hpo.sh  run_glformer_train.sh  setup_and_run.sh  setup_v100.sh  slice_stream_graph.py  split_heuristic.py  sync_completed.py  visualize_stream_graph.py
sg_baselines/: CORRECTNESS_CHECKLIST.md  README.md  __init__.py  config.py  data.py  features.py  heuristics.py  ml_pipeline.py  run.py  sampling.py
src/: analyze.py  build_graphs.py  build_pipeline.py  build_stream_graph.py  compute_features.py  visualize.py  yadisk_utils.py
tests/: test_analysis_api.py  test_analysis_script.py  test_baselines.py  test_compute_features.py  test_data_access.py  test_data_module_contract.py  test_datasets.py  test_eagle.py  (+40 more)
(+164 files in other folders)
